--- a/weather map/index.html
+++ b/weather map/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Hello There</h1>
     
+
+    <input type="text" name="Text" id="input">
+    <button class="btn">Submit</button>
+    <span class="temp">Hello</span>
 
     <script src="index.js"></script>
 </body>
